--- a/src/components/Tasks/Tasks.scss
+++ b/src/components/Tasks/Tasks.scss
@@ -1,4 +1,12 @@
 .tasks {
+	&:not(:last-of-type) {
+		margin-bottom: 40px;
+	}
+
+	a {
+		text-decoration: none;
+	}
+
 	&__title {
 		font-family: Montserrat;
 		font-weight: bold;
@@ -78,10 +86,46 @@
 			align-items: center;
 			margin-bottom: 15px;
 
-			input {
+			&:hover &-actions {
+				opacity: 1;
+			}
+
+			&-actions {
+				display: flex;
+				opacity: 0;
+				transition: opactity 0.15s ease-in-out;
+
+				div {
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					width: 32px;
+					height: 32px;
+					background-color: lighten(#f4f6f8, 2%);
+					border-radius: 6px;
+					margin-left: 5px;
+					cursor: pointer;
+
+					&:hover {
+						background-color: darken(#f4f6f8, 2%);
+
+						svg {
+							opacity: 0.8;
+						}
+					}
+					svg {
+						width: 11px;
+						height: 11px;
+						opacity: 0.4;
+					}
+				}
+			}
+
+			p {
 				margin-left: 15px;
 				border: 0;
 				font-size: 16px;
+				width: 100%;
 			}
 		}
 	}
